2006-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Implement DESTDIR support.

2006-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-path): Add "/usr/xpg4/bin" on top,
	because on Solaris a POSIX compatible "id" is needed.  Reported by
	Magnus Henoch <mange@freemail.hu>.
	(tramp-perl-encode, tramp-perl-decode): Adapt copyright years.

	* tramp-uu.el, trampver.el.in: Adapt copyright years.

2006-02-08  Sam Steingold  <sds@gnu.org>

	* tramp.el (tramp-maybe-open-connection): Do not wait for
	output from a dead connection.

2006-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-convert-file-attributes): Set file's gid change
	bit only when id-format is 'integer.  Reported by Matt Hodges
	<M.P.Hodges@rl.ac.uk>.

2006-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-wait-for-output): Wait always for the
	prompt.  If it returns earlier (when detecting an error message),
	the rest of the output will merge accidently with the output of
	the next command.  Reported by M Jared Finder <jared@hpalace.com>.

2006-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Add autoload for adding
	`tramp-completion-file-name-handler' to `file-name-handler-alist'.

	* tramp-vc.el (vc-user-login-name): Wrap defadvice with a test for
	`process-file', in order to let it work for older Emacsen too.

2006-01-22  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.52 released.

	* tramp.el, tramp-ftp.el, tramp-util.el, tramp-vc.el: Add code for
	unloading Tramp.  See comment before `tramp-unload-tramp' for
	checklist.

	* tramp.el (tramp-unload-file-name-handler-alist)
	(tramp-unload-tramp): New defuns.
	(tramp-advice-PC-expand-many-files): New defadvices.
	(tramp-save-PC-expand-many-files, tramp-setup-complete) Defuns
	removed.

	* tramp-ftp.el (tramp-ftp-enable-ange-ftp): New defun.

	* tramp-util.el (top): Apply `ignore' instead of `identity' for
	byte-compiler pacification.
