@@ -1,3 +1,10 @@
+2006-04-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-display-shell-command-buffer): New defvar.
+	(tramp-handle-shell-command): Display output buffer only when
+	`tramp-display-shell-command-buffer' is true.
+	(tramp-handle-process-file): Set `tramp-display-shell-command-buffer'.
+
 2006-03-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in: Implement DESTDIR support.
